--- a/packaging/hudi-timeline-server-bundle/pom.xml
+++ b/packaging/hudi-timeline-server-bundle/pom.xml
@@ -20,7 +20,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>hudi</artifactId>
-        <groupId>org.apache.hudi</groupId>
+        <groupId>io.hops.hudi</groupId>
         <version>0.7.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
@@ -32,12 +32,12 @@
     <dependencies>
         <!-- Hoodie -->
         <dependency>
-            <groupId>org.apache.hudi</groupId>
+            <groupId>io.hops.hudi</groupId>
             <artifactId>hudi-common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.hudi</groupId>
+            <groupId>io.hops.hudi</groupId>
             <artifactId>hudi-timeline-service</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -164,8 +164,8 @@
                          Include hudi-timeline-server with javalin dependencies. 
                          hadoop deps are to be provided at runtime. see run_server.sh 
                       -->
-                      <include>org.apache.hudi:hudi-common</include>
-                      <include>org.apache.hudi:hudi-timeline-service</include>
+                      <include>io.hops.hudi:hudi-common</include>
+                      <include>io.hops.hudi:hudi-timeline-service</include>
                       <include>org.apache.httpcomponents:httpclient</include>
                       <include>org.apache.httpcomponents:httpcore</include>
                       <include>org.mortbay.jetty:jetty</include>
@@ -210,7 +210,7 @@
 
                     <relocation>
                         <pattern>org.eclipse.jetty.</pattern>
-                        <shadedPattern>org.apache.hudi.org.apache.jetty.</shadedPattern>
+                        <shadedPattern>io.hops.hudi.org.apache.jetty.</shadedPattern>
                     </relocation>
                 </relocations>
 
@@ -225,7 +225,7 @@
                         <transformers>
                             <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                             <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                <mainClass>org.apache.hudi.timeline.service.TimelineService</mainClass>
+                                <mainClass>io.hops.hudi.timeline.service.TimelineService</mainClass>
                             </transformer>
                         </transformers>
                     </configuration>
