Add snapshot repository

--- a/pom.xml
+++ b/pom.xml
@@ -1441,6 +1441,11 @@
       <name>Hops Repo</name>
       <url>https://archiva.hops.works/repository/Hops/</url>
     </repository>
+    <snapshotRepository>
+      <id>Hops</id>
+      <name>Hops Repo</name>
+      <url>https://archiva.hops.works/repository/Hops/</url>
+    </snapshotRepository>
   </distributionManagement>
 
 </project>
